# astr596finalproj

./: KEATING_growth_synthesis.md  README.md  pyproject.toml  research_memo.md
outputs/: ensemble_models.pkl  input_normalizer.npz  output_normalizer.npz
outputs/data/: inference_results_test5.npz  test_metrics.npz  test_outputs.csv  test_outputs.npy  test_params.csv  test_params.npy  train_outputs.csv  train_outputs.npy  train_params.csv  train_params.npy
scripts/: fix_timestep.py  generate_data.py  run_inference.py  test_ensemble.py  test_existing_code.py  test_nbody_code.py  train_emulator.py  train_pilot_sim.py
src/nbody_emulator/: __init__.py  data.py  emulator.py  inference.py  utils.py
tests/: eval_emulator.py  test_emulator.py  unit_test_emulator.py
